# gopadel

./: .gitignore  package-lock.json  package.json  start.sh  test.go
server/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.bot  compose-dev.yml  config.py  docker-compose.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 071ac824d6f7_user_bio.py  07b711f79fb5_make_city_optional.py  13c1e0f9326a_add_end_time_and_description_to_.py  200c5a93cb67_user_model_fix.py  21368eedac99_registration_status_enum.py  2f1f526da515_base_user.py  3463160b71de_user_model_fix.py  4aa3a975fc09_admin_user_base.py  5c9addaa70a5_add_user_id_to_admin_users.py  5ea28ec8aadb_change_registration_payment_relationship.py  6324aca64b6d_add_constraints_and_defaults_for_.py  6e90e8d2b01e_default_loyalty_levels.py  7e01fea4f4b4_canceled_by_user_status.py  8509cf73583a_tournament_origanizator.py  aad626bfffe3_initial.py  add_clubs_and_update_tournaments.py  add_description_and_requirements_to_loyalties.py  add_playing_position_and_padel_profiles.py  b48fe1e71060_add_canceled_by_user_to_registration_.py  c4b1724585b3_payments_update.py  db_uuid_tournament.py  (+3 more)
server/api/: auth.py  deps.py  main.py  payments.py
server/bot/: filters.py  init_bot.py  main.py  middlewares.py
server/db/: __init__.py
server/repositories/: __init__.py  admin_user.py  base.py  club.py  loyalty.py  payment.py  registration.py  tournament.py  user.py  waitlist.py
server/services/: payments.py  storage.py  task_manager.py  tournament_tasks.py  waitlist.py  waitlist_notifications.py
(+710 files in other folders)
